feat: add new targets

--- a/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
@@ -1,53 +1,75 @@
 alertmanager:
     config:
         receivers:
-            - name: ENC[AES256_GCM,data:SM55aQ==,iv:jyNh2NiOEzu7Omd9zL73yatGnoBaBShR1dkpf80DjgY=,tag:XlnvL34m56c8leisH5mVuw==,type:str]
-            - name: ENC[AES256_GCM,data:xgHeXjA=,iv:sSOU8y7e1VT+dzmN2IaVS7b70QueYAiWQYKOX5qqF8Y=,tag:KX91syPA09+AdKX/uVRKUQ==,type:str]
+            - name: ENC[AES256_GCM,data:v/+j9Q==,iv:49FdqhiC6163bIxto24uy6EFKhHnHqir2lm0w/Z/7f4=,tag:1kgqi9gjCy1cU3OCiHVCjg==,type:str]
+            - name: ENC[AES256_GCM,data:11HC5+k=,iv:z/nqVSP/aZevDy8fcL83/p1whSfz1K/+iytf+qWNy54=,tag:4TLL8R9gp4gQqWhxlpZhwA==,type:str]
               email_configs:
-                - to: ENC[AES256_GCM,data:Ons9AO0MqA/fxu1WrjgI4+aP,iv:OUU+jq266YZWC6O411eXhPQX473ItiB9wOg1xzIXoUo=,tag:nqiO0yxLKob7I3GBYzPyNQ==,type:str]
-                  from: ENC[AES256_GCM,data:SrI4iY8sd11veXVs5/0uZ/m2NIdBKuFQjIFb,iv:8QWkyaU9hQb03bsTTamKC+q87QbK652v5Wd9WM3X+kw=,tag:HRixo8bFXPcvQFL1UAhZbA==,type:str]
-                  smarthost: ENC[AES256_GCM,data:c0TG5Dj269y+7XShezsC3YQOFkUzSq/0WV8s4dJK9Q==,iv:siR0WahCaVRoXjRM2hRV9w4P8prb3IhBXHpYXrKGUm4=,tag:6TsyDisVHJyaCq0SERa1KA==,type:str]
-                  send_resolved: ENC[AES256_GCM,data:4JjLyg==,iv:+4uvz/76pQakygP4J3697jOxxO3m4AoML+rGneNVkvs=,tag:OxW3nAAizeodhSg8aCSUBg==,type:bool]
+                - to: ENC[AES256_GCM,data:4ZqTHDHkzGnbIqLnmw12moSc,iv:G3ZU01/pjH2K4BRUW+S6t4cg+X/2E84Wb/JD97Sho5I=,tag:BSLMb1Q+f9j0DG0xlCAEDg==,type:str]
+                  from: ENC[AES256_GCM,data:Y2xiWh1iXQS2aUD5YasgFsi9mzqQEq9ZL/nC,iv:gQ6jcrX7hnKhpQyzPUllbAvOausa6er2F2hVInaphrs=,tag:O25Dd7PmRH1s5TBFo/WCPQ==,type:str]
+                  smarthost: ENC[AES256_GCM,data:13Y7/Gn0BVrtBgsSGMcRSJVB+naDDja2McqWenDEzw==,iv:TKo/iEpOJFeo8kiz4u9ER94cUJsf9QZX9BsgIdPcbh4=,tag:asShIjizwmoTyqT3UfIZwQ==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:Vxvt9A==,iv:YX2qkxcmAP7SkJBILSX3Sq22BFVfaMoweaoCcU93L0I=,tag:WZRL8xdwnYqkWtw9t09PvQ==,type:bool]
 prometheus:
     prometheusSpec:
         additionalScrapeConfigs:
-            - job_name: ENC[AES256_GCM,data:m05dZfC0SeDrmS/x7A==,iv:AzWabESd+vMbtZb3MSWg1guV9xvsjIyWRpWRxcnwctI=,tag:BAuKduSGvflatr0b89V/2g==,type:str]
-              scrape_interval: ENC[AES256_GCM,data:hbJv,iv:Sm21MOZf1ZoxYH2Xd5h0NOYXuE5KbUkvgz/utZoYq/8=,tag:0yQm/an4GTceyUlmVHhUZg==,type:str]
+            - job_name: ENC[AES256_GCM,data:MOJ9+QySzCVgBi9uHw==,iv:oxSbfPpfK/F5wHwpc/+H5p7tnfjdqyQYRGgSfW3RQqI=,tag:0CquGATXTS3nO1VNwpIChA==,type:str]
+              scrape_interval: ENC[AES256_GCM,data:5VXi,iv:steyDu0aTr18KqzSZMKOtdAaH2tLodk2GvFl0z8X/ow=,tag:lII27LumzNcwEQ1MMSbGag==,type:str]
               static_configs:
                 - targets:
-                    - ENC[AES256_GCM,data:QOeYenv4c0ri7YlM/IVHr6Miqf066OnNMobuQLZ8PZA=,iv:yIYy7YYCsisAPx0VadgSRvLfzdepU+lQiYdB/3/svzw=,tag:DzWaC03nQvoRghkwkTTB0A==,type:str]
-                    - ENC[AES256_GCM,data:JAQmfC9Vso9JLYbpBgK8myhT14VMvRtZkw7FWIO+e3U=,iv:xwNbSTlFECed+0P0xVXHfbNsZWpyuw2rKbUzDhR8Kb0=,tag:HhhqgtDRq8lU5yArrwFbEw==,type:str]
-                    - ENC[AES256_GCM,data:j8hanX5qJst2583vHW057JvqlHvj4qqqSpjKGo3YDGc=,iv:Wq+rXq4IToUzt65isICQr7Vtx/FM4gpTcup3eCW5KPM=,tag:feuyYtxxa6dlGZv629NH2g==,type:str]
-                    - ENC[AES256_GCM,data:Z6134/yZyHqdOPIyHuZUpBqCChs178pl5QkiX6S175Y=,iv:qcx2foG0bc484xqOOL38demwW6YzNJDKe7YeUpa/5u0=,tag:56etQs0z5JtdfGL8ccnxNg==,type:str]
-                    - ENC[AES256_GCM,data:Q3clUp2eas+BvDFc4XoWoO385haqnot311Pds0iuLwQ=,iv:1Cg/f8559917q3hlXv/URiyTAVUI7wFKWwSgclM/pI8=,tag:w1rpsMC67fqrrYT1CcE/IA==,type:str]
-                    - ENC[AES256_GCM,data:isc5Ro3yy6P+IiTIpDPrej9Wl7AIVzKfC+iDDw==,iv:dLCP8y5F9V7We3WexQHXsIUc7zK/WKKpMqvPEyYT09A=,tag:TVYEL4n99WI/xJu5Z9jWRw==,type:str]
-                    - ENC[AES256_GCM,data:cAY/JiRfFFutoEAHLssylytBNDvUNIniGslq8A==,iv:/OtqQ6RuWrRQxDAT4hVhiiK+ufCSOPuUgG3wNRmzkH8=,tag:lA229jOULQ5+MDaKmkgQbw==,type:str]
-                    - ENC[AES256_GCM,data:htRr8hy9X25grBFwaIQ9TTU+YIoBws7KgZPO8g==,iv:0zfSJXcYAO7/mvlENvBW7SSM8CYsvQ4b5xrDRok6HxU=,tag:fjT7PH+hNtWgPljq3qZAFg==,type:str]
-                    - ENC[AES256_GCM,data:2B7Fb1xcpzfTRGRgXRrwIta0DFnY7DiaYjYyFw==,iv:KiqHEh4BkOCpWucWOkyS5AuzZMlRECOf6S9LzhdwG2M=,tag:8PhBuRVbcHGKTnJYRWVeTQ==,type:str]
-                    - ENC[AES256_GCM,data:YQZg6776GQYcPNdqaSIPk/hDhh6WdzeyE/6VKQ==,iv:v+MfnrwOlIBjP/kBZKphdXquHOM6IEo2bP4wc0pUWbI=,tag:bBRhZ3p0dHE7xk31eUXVJQ==,type:str]
-                    - ENC[AES256_GCM,data:5hPtoPK1grQ7ryzFMXnIYpXwix+DV80L58C2WA==,iv:HC0wlbP6LTMMYq6t+oOazf4M9b+9MY1Bo7PtHE4wV0Q=,tag:4kOnvkG+ZgiumIsQA+nJfQ==,type:str]
-                    - ENC[AES256_GCM,data:J905+JdXZ3Tybi654jEtb3+l+Mqllw==,iv:Me9Qt9kWg3T6KGX0z/dSz1dMClYv9Afw5+25bLm4lNs=,tag:I2HHoxOHPwTfaFrOrmibDg==,type:str]
-                    - ENC[AES256_GCM,data:3aN8MA1uCnfHyVTWUI94,iv:y6DH2D4qXEsP9Cp3MleDcD/bOdieYja0I5lOczH8Dfg=,tag:CGaBD/fON60LSoiI7oxMfw==,type:str]
-                    - ENC[AES256_GCM,data:jzhRjdKNr0Gmmx1LHut0JZCi3AsXGUWtdmIfodUA5S43Qw==,iv:JaURAdc2tsgOzMdQQ+CHVGLMfGvrND1gzswTx+gbhZA=,tag:SqWZOTKegWr2NRmfvyxMiw==,type:str]
-                    - ENC[AES256_GCM,data:Me+RuNy5Op2HKrFVSd9BrNmc,iv:CvjhpQmpxlKkuokDZBB2RnT+FRGnR9F4jIiURxstHOs=,tag:dG4DG0CgGYUXf1aDgBInaA==,type:str]
-                    - ENC[AES256_GCM,data:poOzSzYczqeBsPXluBIe3gzIp/8nkU+hXMo=,iv:mMupScUDMeeNPf8FQvIEOGfEksjPU1G1WNLeMk0ZY0I=,tag:AFVq3lXdp1hdSF7JetBR1A==,type:str]
-                    - ENC[AES256_GCM,data:6X7+SmN+fEAbRhZBYx/1AjRDjAOshzFZFSoMK8bJFycxtQM=,iv:2lO4CT7AUNmiSwK5IyWGoz1VnE/oAKqI8VZWbaCGvMY=,tag:jKivuml7WLioU8LHFkD3Lw==,type:str]
-                    - ENC[AES256_GCM,data:hCctNgXwMuSZ8f3vsUnHwUbNWmyJBDy0164qtvS1DJGLVOS4NQ==,iv:79oCG9ZAv/qyZQQsz2w3r8R7b7i+VDjL/XAzI6DNmtA=,tag:EmXq+QTHAsgmPrPemBY0WA==,type:str]
-                    - ENC[AES256_GCM,data:h9Vw6BpIDoNpf6AO+LnU5UOdOh9lliuOz+tTDpf5vh6FsgapDg==,iv:htTOlp9KLy++wl/QzKxAo4TxqWapiobrPjyOauNv5BQ=,tag:O1fCEH7EopSz/TgPQrz6pQ==,type:str]
-                    - ENC[AES256_GCM,data:qXjKd5iIPSEt6JYMFx7/4wJjGcRczF4nirl6z8ZzyahdyFEokg==,iv:KaNqVTdUb4YqhLVnnZN+NMr4ytq9wxjmhSo/c5+18Tc=,tag:tlAuVAM5rO2qFCs8OMvytw==,type:str]
-                    - ENC[AES256_GCM,data:brisNdJkQXwEjzec4nQ33QNiDPITEcBNxBnBlXqNUO7rdx0zGQ==,iv:OPBsKCpictZTE5ycBHnTaaWystfdxLrNL8iY1TRrHeE=,tag:QJXSgpXvlvYnWbOEJaprgQ==,type:str]
-                    - ENC[AES256_GCM,data:3pLoqvdV0B0FGxH0o1T6tBdTQXyYNu6IhgG8e2npUVsE1qpHQg==,iv:H9vPL/TL9fzyoZFHJhnsldeShmMac/Q4LPvroikXhPE=,tag:hNh30PhMwuvUjfyvLJc/LQ==,type:str]
-                    - ENC[AES256_GCM,data:cdJ2Go6wo/uXHrKRR1fbKrvs,iv:No2r9h1rHRv9yBkirXXOZNG5/vv0m7eAkCZHiyfcIK8=,tag:8fFdqaRmoHIsn2zRMJQ6Bg==,type:str]
-                    - ENC[AES256_GCM,data:T8k1NTCj5ETk8Vo0qzv4z9GgURLDc2add8Ad8kmbrRJPaQgYN5ifZg==,iv:MGQu9FY8SnNW9D9yukfL/RsOkt+8gD/JwJo9JcKFufo=,tag:TFWIV9WngP9RPvj2UNjoKQ==,type:str]
-                    - ENC[AES256_GCM,data:WnFXlL+FYMDz2xiuhqPqtpqEd7av37IVWDOnDvcanIbijnmkFhl8Si6z,iv:NLo2p7hxVqHyG6ZICH/cPk29j/rzTVSBJ4g23Jsl0a4=,tag:GM0KY10Wq1gwnir/eDPELA==,type:str]
-                    - ENC[AES256_GCM,data:wH6PmGxXI/AzYdXq88iSe/qrWn6q8Bc=,iv:bfx7C5Pl6o++nUZgG9vdtq8XT49rNZKCA74FFC8ya6A=,tag:MZdq/eLLRkJRcgwdI+ZX4Q==,type:str]
-                    - ENC[AES256_GCM,data:Dl/evq+GcR/5lgKyutY2d7v9,iv:JKmQeGQtE5F5u0XWRkn5anQpUzDJ5omzfACEBx2BjIs=,tag:1NO7kIkJmA5RbfYpyoXNGw==,type:str]
+                    - ENC[AES256_GCM,data:BWDnQ7gFW28Ojdtf6hhXDaxboxUzzySFigeHbJt4jpA=,iv:mapY282Y6k1/xxOrSlJFHBCJqN451OeYiPaheHQbh2s=,tag:oyOUg9jWObYBX2DwJnu9Ew==,type:str]
+                    - ENC[AES256_GCM,data:nFwY1LnBKGYuS08ABJC3GpJxZ2BwI0I4II0fUbsmovI=,iv:fCIXatM8aCeQug8BD3N62XmSy/F93obonedKctnHk4U=,tag:WJDMhJzjAyw8EQL2U3w51A==,type:str]
+                    - ENC[AES256_GCM,data:WwFSGyjr3aBH8JNgl29OU7lSptlW3E8dsz4+DpWlcU8=,iv:IZlN2pTXWHJLZpKasKjzekkN9ltT9nKXwJwzFz5BaI0=,tag:jOBy7ZB5XCi263/kA3281g==,type:str]
+                    - ENC[AES256_GCM,data:aA+cJAnelYvDm2zjV0Y/ZYJ6259i8YZlAkQhdAGBrxY=,iv:2/okgxLW4uf/+il2yoJ1FtGw04HkdnfeIJBkGK0YkRA=,tag:7mbLkMHUhGG5I4eol7zRvg==,type:str]
+                    - ENC[AES256_GCM,data:KPFsQ678NHz+KkphHHoYm09XguD5QEyVpkBif/RQXs4=,iv:DCR9SzyGeoBs0lfAj2I1tgA4V45Pn7J39jXzY+7hmiI=,tag:hxnFkKHgl0BzkOrpbMPqgA==,type:str]
+                    - ENC[AES256_GCM,data:ukH9/yoUKfLwj6TzZWDZE9fcrefEmVFu2I9Y9g==,iv:LcQUWn3AQci4Hx1UDEuolsVL9r3auSALnpUidoXSBf0=,tag:6tApiLiz8+ykvshrzB9inw==,type:str]
+                    - ENC[AES256_GCM,data:48gvy3ryotxdxU0XJtqk3Ej4iFjQe1c+lE4cTg==,iv:+fomECBkHWutfWCoNxt4M52DDydd2Kti7BcELUpX3GQ=,tag:wLIpTx0FHw3eSDidu/howQ==,type:str]
+                    - ENC[AES256_GCM,data:iT+9cApyU89IuXc+KGDgwwcIutxtZ57byT0Adg==,iv:7JyC0Vs0bW8jOBzfQcfTIWZtoWq2oJlg7VaEj3E1gvM=,tag:NuuhYVmbr0alURlu+Z0t5g==,type:str]
+                    - ENC[AES256_GCM,data:YTNDW/yjt+4zjlfSaiMFGdzGvqXla/M3l6gCjA==,iv:XXAjETGIsHaUULHnVJLTPPX1gWQngEnIJKkPYlXX87E=,tag:R/tZsqRBHhTXd5aDovciwQ==,type:str]
+                    - ENC[AES256_GCM,data:jaNWmThjGDAjo+jViCfW6wsApLc/Mp5wkgB8BQ==,iv:v3NwVPFdoErEPI758LWdg5uTykTcF/vSYdLT8+Ww6Yo=,tag:5ci+ZtcjIkNTzXRAoY+X3g==,type:str]
+                    - ENC[AES256_GCM,data:rx/m17LdgJOVa1WQ0oOqFCOi522D6DL7irNgww==,iv:BzqbsJBfYc6c7n22hGH5AXoBS2G1TThLaoZnDRKnLNA=,tag:ODtf9H6mYA5D/fK2UA2kZA==,type:str]
+                    - ENC[AES256_GCM,data:RtVXt2dMy32yWCmz046Yl2uOEoX+sg==,iv:fLMir7jYM3lvDKaIfLykd+GYle+dDJvZiCAQzRxj4Ak=,tag:7qHpNZB9cQUTs4d7ccTX6A==,type:str]
+                    - ENC[AES256_GCM,data:wd4Tug5V/VS99HB4FZAc,iv:A2ItQksgMcguwl6Bz4tSzGEfHx+RA2TSLf24ryMO3UU=,tag:JR48ewdk0mFTruM0OXzYGA==,type:str]
+                    - ENC[AES256_GCM,data:bbgGewZnfr1drwhq4mhIPsYOvnsTlN38F21eUbirR8bGAQ==,iv:oOrghr+VdG3al1eP67emsN5+KciuiDjoskErsL6etzU=,tag:45UDKCrDXbUsUFMGRKL1sw==,type:str]
+                    - ENC[AES256_GCM,data:FF0BpaX2WiLxNS//uMtDiGR1,iv:HCTMCA0FqsNAZ8Ti+kD1hPCIEuCOnQHbh27i22UAFzI=,tag:T3otm62svbtwsGUBEdcqiw==,type:str]
+                    - ENC[AES256_GCM,data:oZdtaLuJLZ+gc55+GWO4i999bGd2jHzH/4c=,iv:TipHF1DH0VydWE2x2M7pvtlmlCocrUB3ZjOHOAbfhaw=,tag:nBJ601ssvMAO9Of07JN4GA==,type:str]
+                    - ENC[AES256_GCM,data:sr/t3Mfacahd3h7Jx/mPQ4CM0oEHQNCfbUojy4cuZblKEfQ=,iv:dIEoaBgk6EfYjsRfMg8+8eBUWdjHtLBuzCoYZfHUznI=,tag:SmGyzXoGwGsUjOUYAmv6Mg==,type:str]
+                    - ENC[AES256_GCM,data:nUK8UYLVB+KaWbzXeVoB3A6YqSgBNf0e6w/Dc0K0WktwkCgXSQ==,iv:rSdwDcnXLr0j7SswOLuduAxx2REzope01xWLBJXsBXQ=,tag:UWv7H2teuSHeHSMbopa/wg==,type:str]
+                    - ENC[AES256_GCM,data:j7a9DdaFQu1Jtv9dwPsbvkCdZSRYFjIgg87IHhxce8VRahQ9xw==,iv:61eIbnTgaC/SQy0G0/skk+36RpYKY+NqgpBSW0Kqt1Y=,tag:yBsDtX1azkAXHID6K/fexQ==,type:str]
+                    - ENC[AES256_GCM,data:7bheYlqV/Gqi58VqnlOr3gfp6CqYEBAqriCFU4lQR3cAFarz+A==,iv:O8/pqZI/s1KM17oQv0AdRU0fpX5pahHZBOFpB7ouYT8=,tag:zIw9uVAuowCvjlCfPOF6hA==,type:str]
+                    - ENC[AES256_GCM,data:3Q2hiBieTjtCzWCY5atDoBFCUseE+1EvE476a6tLd0mYsiTQZQ==,iv:Bvk1hkx5U+xJKqVI+krFEudNU5hVUqYvJlsHMxjB+NM=,tag:nZvPYzSIN9gCJ0JN3REBQQ==,type:str]
+                    - ENC[AES256_GCM,data:vKLIdTJw1TSlGn61ScU4IAPash8QczN5PGtqPiriRTaLVYaWRw==,iv:DA0Twapfw1n8LkSMl1BQ1X+MvrAeOf1PQco3ewIu6lM=,tag:SGLR3Tx5aLAMZ4BWVrmRvw==,type:str]
+                    - ENC[AES256_GCM,data:LA4S9mmDbXLtWlYyQWT7+Mwo,iv:klL7tXrcLV6Bcl0OvrbddR3KHK/zNRe1g3N5xOnD7jU=,tag:sJUw87Prls/yIVP3qaeVIQ==,type:str]
+                    - ENC[AES256_GCM,data:xGEUWRDAG5kmlLw6z7nVbaiyqG9ZuXd1qUoOZoHMctrD++NJQ/daIQ==,iv:WrMST60L6soH2BvJVGV2equv0eyalZBHC8/CI7Pc27I=,tag:vEdgMNJQwghzbFAA/59rSA==,type:str]
+                    - ENC[AES256_GCM,data:F2ZWfbmqkYTkpxlxfNjvbhojkuYYdw60LDNkBYxYVJNKExwo2ClCC1Qq,iv:FDcfMORnsXiLsGlSbGv/oPaapp5dwFUkeqSZ+8Uw3C0=,tag:I9Ci87Zb/3Je39RSC4OS5A==,type:str]
+                    - ENC[AES256_GCM,data:YSVu5nPBd307CQOJv7T7P0Ep83eSgKI=,iv:1Nh4aily5V7NNpNpK7NiNYXt24uI0xBN3zBG947Dedo=,tag:8yMBViWQueVA276ufaaCwg==,type:str]
+                    - ENC[AES256_GCM,data:TxPUSiVZ0wIihw0/XFiAMpAN,iv:R9AnzV4/bmFP6kQWxqQEHraKBd91shwOEIFszNnUZ6A=,tag:3SMzYdAF5keXoX9TDHMU3w==,type:str]
+                    - ENC[AES256_GCM,data:nh8i+Vn9xsg0cLDsgakWK28=,iv:z4n/F9imJSsmXgnsx0M9jHGE4HcsePh/IVVdYIl2Nro=,tag:68nBYLzmIF2VC7XMm8u2SQ==,type:str]
               relabel_configs:
                 - source_labels:
-                    - ENC[AES256_GCM,data:he4o1TRRcgXDSV0=,iv:bAadouu9D1Ps1J2YdOlhWOanXZNr7Fg7b16zruva9Eg=,tag:XkUm7P/VllqhCW92MF5Wjg==,type:str]
-                  regex: ENC[AES256_GCM,data:bjyl6r95uFzPmIZ3Mr81/qA2,iv:4QS0GQaAOImaTmWwQ1AQ0xiBusxoMDnYk8jFYusT2s8=,tag:PvZdDcubKJi3pYleF058KA==,type:str]
-                  target_label: ENC[AES256_GCM,data:tZ/BGaUwsPk=,iv:cYCOPkSWrgIXsFjNVNpRUapI1idukHbGPre+nRPAfOw=,tag:lzpjlfPyuqyjXjlvh+auag==,type:str]
-                  replacement: ENC[AES256_GCM,data:G55dLnyZC9qcLDJ+OjJOVUEojbaox2ib,iv:VbcSXC/d1fB6tAntYXIuMfbv1XManbjGVggWvKKUJWE=,tag:KRHFitFJ1eLtJ1sMJ8rTCA==,type:str]
+                    - ENC[AES256_GCM,data:m5ZJhzP2b2RUr0o=,iv:CFBEmNYS3xftXnIRGYAysUnNVVTQwz8nzWPAEsFjLho=,tag:Tnt336y+59KUPaL3UXOswg==,type:str]
+                  regex: ENC[AES256_GCM,data:FCaX+OvSJf6znYmUD7qJaFHO,iv:82af44aJtIUELCMwLKho7ZYEY8FzK/v28usDllPM9tE=,tag:MLdM2RrabaAgBl9I67PplA==,type:str]
+                  target_label: ENC[AES256_GCM,data:SqotBmmICHM=,iv:A7Q27jkWw2Elm5kbXAThloGImXP9htwZqXBuM67Oz4E=,tag:vKOwW3l2ZnMEcOjonHgEFw==,type:str]
+                  replacement: ENC[AES256_GCM,data:MHCm/qg9be5qVPdLY5g/8p8XoGj3s/kK,iv:aOZSOzG6XGa4on2AtoqIcmNREL5oVA+ngzr29E03s+A=,tag:yAH9lwuQGVWkXdT0/P1h/Q==,type:str]
+                - source_labels:
+                    - ENC[AES256_GCM,data:gyy22Fh47CwYfpk=,iv:iBa60lkxhEnsGMeydfyZZEKIPnk2EdmCPA4sKDzJU1w=,tag:okuCzP0iYE5msNWhKzjo2w==,type:str]
+                  regex: ENC[AES256_GCM,data:ISJ5xKGonfD/98xFuNoc4TU=,iv:cNQYNgflDne6y8b4mBHWG1+7ByF2VwQc08KxLjQ/RGs=,tag:+kdPsvob6VuahEtf/Fq+jw==,type:str]
+                  target_label: ENC[AES256_GCM,data:mjdP5FiC6mA=,iv:fK1WUYxurX/qOLlQ1xLPXAL1jPCNnm2dTxco2edUVPk=,tag:2yyXiI4xBEuV7GiYoJGwHg==,type:str]
+                  replacement: ENC[AES256_GCM,data:c9kV2AyzaHaBuXgH9xe9k0tIInwx2Q==,iv:hbcAaCoymyf0pQulzPKmCN4n6Xa4WeKCgqcRjUk1bX0=,tag:V7kcAcVLCzSDiKuVEvo6+Q==,type:str]
+            - job_name: ENC[AES256_GCM,data:adAw,iv:rrmavII+3OdCdpsOFWBXju/UvY60Ijhm4ULNQ5wPz8w=,tag:1OVntTfqbzXNOzlLvQFY9w==,type:str]
+              static_configs:
+                - targets:
+                    - ENC[AES256_GCM,data:zSi3whCviBxblFMWqR8Kspuq,iv:elmbZ+IoxApUAsZAOZ4vYZm7blULFVQsu7tUP/l/qvI=,tag:iAxSWcv6BauQ4mkeu+flpw==,type:str]
+                    - ENC[AES256_GCM,data:BN3o9izqI2sNpbTnO5tQLeI=,iv:cBft/Ra0EQHCjNW/rRlwGnfwL85Ege2DGV10SYMvl60=,tag:aT/wtVc6xLLFmsyKaaWilQ==,type:str]
+              relabel_configs:
+                - source_labels:
+                    - ENC[AES256_GCM,data:43TD7vy9n28g9o4=,iv:X3WVYsKgku8nyRtaB+vqLxyD1P+IfEEGgIA82pNZV3Q=,tag:kr6volaXgB4K3KO5E5uoig==,type:str]
+                  regex: ENC[AES256_GCM,data:979HwKamUEUHHihZEivLTBwV,iv:6LSBZJhI9oC4kwbeMXhGT0VlPA1zXbaPIAjO5bJPVT8=,tag:tkmP5PZ+ZiSPx4TWrl7FMg==,type:str]
+                  target_label: ENC[AES256_GCM,data:8s5ifQarH2c=,iv:EeQjWWx4qJdg4dUuu9NkYI45ccWNmZTfodm+4mDml40=,tag:jlAtoipgn09X4kdM2dxESA==,type:str]
+                  replacement: ENC[AES256_GCM,data:jnRJlg86ZdifViBeCQJwp0SO6o/1pUIP,iv:eedChZk1/WhZDsRooy/e7C5iVXDOdjKvrntBeuzJvhk=,tag:vx86qWfxwZyvefCVQX+V3g==,type:str]
+                - source_labels:
+                    - ENC[AES256_GCM,data:4HQz0aWPVYib5+c=,iv:QSeUl1rg2Ao5IjGPJd58VVTOKnwbgoIZDQVk0khOOhc=,tag:T/1tH2Yj4L7I9iTekhajaw==,type:str]
+                  regex: ENC[AES256_GCM,data:xSPfNabgNwXwmr1BnhkbINU=,iv:6B03WNx+h2opwFWqlz0epXGAF3Fi/QvetErefcrxvmQ=,tag:veW25KMprIHs/5Vl4eGrlQ==,type:str]
+                  target_label: ENC[AES256_GCM,data:zI0qTzx1s8s=,iv:moL0RQcp7NOx6eRfXJFmc8X2zvn6dcscrceEa07M/fk=,tag:6Z89jVOKeGoKgPo4HPLyZQ==,type:str]
+                  replacement: ENC[AES256_GCM,data:Yu0k3deYbxiAI+CHH4M3/XHhVYBwYg==,iv:cqcwNuDrFVrWHe4DGSbgo6cEl+CzzSkPYuCoCN4U0yk=,tag:9zBMQj/YQSl772G5HtnNhA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -57,14 +79,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHZ0pDak84VlRZeGxGUXl6
-            NnhhKzRnaFphM2xQUjhFaXY0WW9FM0Nud3hvClNsT1JCRzRJdnlnZjRzeUV5aUtm
-            OXNjZFpUNzAvb1doTVpETnBIWk42QzAKLS0tIC9teEJoN1lFVjBxL1l2eVdYZS92
-            QlpwSGxpSlpKc0dqUytwbWNwQmwyN1kKz+T/EffdWtNEn1oaD9LeD1IKGC3pzTE0
-            UsVfqoWEssV2kbK9JY2Z5UT0SdpVurF6GVxcESATAT7vwlxEwcZ/fw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2NEs0bTRYcjArOFJ1WlBk
+            a2NjL3U1VXhkT0lVMHRDMGpsNkxMVnpGNFJNCmMxQ3ZzMG1lZ1c0UHJsTHk1WXVN
+            aTFVOXFVblJLYzlIUmpsbkY3cS84TnMKLS0tIEtqTXlhZ1ZvTXI2WUxHN1B1VUth
+            eERYaFdKZTJiRXkxbDFyODdxOFlyK3cKs0x+jaiGYys1StP/C2miLQ81H8fjo7fu
+            Snh0Dcyi2WRX4U8VRt2FM5HfxpRcrzH78l8LyE/CoU8+SDaLQKn74w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-14T07:40:07Z"
-    mac: ENC[AES256_GCM,data:F25N+1u/ViFOsJ3bh3CyUZn+NfTuPIjKZS9WE4zxeWzsh0woADADO6A2Z77l+XpwH0E9S8J3+1spyGxTewv0Jl2d6P1fa1AlF8uFsQoKrNrj4VRqA31D1rFNV9ggsEGecKwdA4aaqlZvJN06BBjhrOq9ZWtzHn1s1G1nLZImBGw=,iv:au5kLkIDalGo1WySuZTBCSt1SbfQRcpNj5gjZytpmpM=,tag:RlE5npj84AENbP7ND6jMxg==,type:str]
+    lastmodified: "2023-01-14T14:16:34Z"
+    mac: ENC[AES256_GCM,data:6YkCAKCS58jFieryUqSkyleFvzHD/jfWenQ4VjMOIVRwK/ez+AOxTXs0tWdVjRWyrqpu0pyjwHk4yX6CzbhM84c97JIT9QjOCJcv+WVBuElEdoh5ZpZ3xzZXaoTHVh70fN4+cky6s8wYf+cVvPBG4U476Ha59ZSGDkDxLv3ka+w=,iv:172HjmOoUB+3OIUQh0cdbj2rorREWex3dNGnYe/F+zY=,tag:X9QPctp/skqfkD/uyD3zbw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
