--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -37,7 +37,7 @@ spec:
         route:
           group_by: ["alertname", "job", "severity"]
           group_wait: 15s
-          group_interval: 45m
+          group_interval: 30s
           repeat_interval: 6h
           receiver: "email"
           routes:
