--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - istio-base
   - istio
   - flux-system
+  - internal.yaml
   - minio.yaml
   - apps.yaml
   - flux-system-automation.yaml
