--- a/clusters/production/internal.yaml
+++ b/clusters/production/internal.yaml
@@ -10,6 +10,6 @@ spec:
     branch: main
   secretRef:
     name: git-internal
-  url: ssh://git@ssh.git.cc.private.hm.edu:zit/k8s.git
+  url: ssh://git@ssh.git.cc.private.hm.edu/zit/k8s
 ---
 
