--- a/clusters/production/internal.yaml
+++ b/clusters/production/internal.yaml
@@ -12,4 +12,15 @@ spec:
     name: git-internal
   url: ssh://git@ssh.git.cc.private.hm.edu/zit/k8s
 ---
-
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: git-internal
+  namespace: flux-system
+spec:
+  interval: 10m0s
+  path: .
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: git-internal
